apex-run.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-apex
  name: front-apex
spec:
  ports:
    - protocol: TCP
      port: 8181   # Port exposé par le Service
      targetPort: 8181  # Port sur lequel tournent les containers
  selector:
    app: pod-apex
